# dvtag

./: .gitignore  LICENSE  README.md  main.py  requirements.txt  setup.cfg  transcode.py  utils.py  w2f.py
.github/workflows/: publish.yml
dvtag/: __init__.py  _doujin_voice.py  _dvtag.py  _scrape.py  _utils.py  doujin_voice.py  doujinvoice.py  dvtag.py  scrape.py  utils.py
dvtagcc/: __init__.py  doujinvoice.py  dvtagcc.py
