[metadata]
name = dvtag
version = 0.3.5
author = Nobe Kanai
author_email = nobekanai@gmail.com
description = A tool for tagging your doujin voice library.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nobekanai/dvtag
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =  # Optional
    certifi
    charset-normalizer
    idna
    mutagen
    natsort
    Pillow
    requests
    urllib3

py_modules = 
    main
    dvtag
    utils

[options.entry_points]
console_scripts =
    dvtag = main:main
